--- a/website/package.json
+++ b/website/package.json
@@ -31,14 +31,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@loaders.gl/core": "4.4.0-alpha.0",
-    "@loaders.gl/geopackage": "4.4.0-alpha.0",
-    "@loaders.gl/i3s": "4.4.0-alpha.0",
-    "@loaders.gl/las": "4.4.0-alpha.0",
-    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
-    "@loaders.gl/obj": "4.4.0-alpha.0",
-    "@loaders.gl/ply": "4.4.0-alpha.0",
-    "@loaders.gl/schema": "4.4.0-alpha.0",
+    "@loaders.gl/core": "^4.0.0",
+    "@loaders.gl/geopackage": "^4.0.0",
+    "@loaders.gl/i3s": "^4.0.0",
+    "@loaders.gl/las": "^4.0.0",
+    "@loaders.gl/loader-utils": "^4.0.0",
+    "@loaders.gl/obj": "^4.0.0",
+    "@loaders.gl/ply": "^4.0.0",
+    "@loaders.gl/schema": "^4.0.0",
     "@luma.gl/gltf": "^9.0.8",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
