--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "KML"
   ],
   "workspaces": [
-    "modules/*"
+    "modules/*",
+    "examples",
+    "website"
   ],
   "scripts": {
     "bootstrap": "ocular-bootstrap",
@@ -62,11 +64,18 @@
   "resolutions": {
     "apache-arrow": "^17.0.0",
     "typescript": "^5.6.0",
-    "@cmfcmf/docusaurus-search-local": "~1.1.0",
-    "@docusaurus/module-type-aliases": "~3.3.2",
-    "@docusaurus/plugin-client-redirects": "~3.3.2",
-    "@docusaurus/plugin-content-docs": "~3.3.2",
-    "@docusaurus/tsconfig": "~3.3.2"
+    "@loaders.gl/core": "^4.4.0-alpha.0",
+    "@loaders.gl/draco": "^4.4.0-alpha.0",
+    "@loaders.gl/geopackage": "^4.4.0-alpha.0",
+    "@loaders.gl/i3s": "^4.4.0-alpha.0",
+    "@loaders.gl/las": "^4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "^4.4.0-alpha.0",
+    "@loaders.gl/obj": "^4.4.0-alpha.0",
+    "@loaders.gl/ply": "^4.4.0-alpha.0",
+    "@loaders.gl/schema": "^4.4.0-alpha.0",
+    "@loaders.gl/schema-utils": "^4.4.0-alpha.0",
+    "@loaders.gl/textures": "^4.4.0-alpha.0",
+    "@loaders.gl/wms": "^4.4.0-alpha.0"
   },
   "volta": {
     "node": "20.18.0",
