--- a/modules/arrow/tsconfig.json
+++ b/modules/arrow/tsconfig.json
@@ -10,6 +10,7 @@
   "references": [
     {"path": "../core"},
     {"path": "../gis"},
+    {"path": "../geoarrow"},
     {"path": "../loader-utils"},
     {"path": "../schema"},
     {"path": "../schema-utils"},
