Examples: Add GLBArrowLoader to pointcloud arrow example

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   ],
   "workspaces": [
     "modules/*",
-    "examples",
-    "website"
+    "examples/website/pointcloud"
   ],
   "scripts": {
     "bootstrap": "ocular-bootstrap",
