--- a/examples/website/pointcloud/package.json
+++ b/examples/website/pointcloud/package.json
@@ -13,12 +13,13 @@
     "@deck.gl/core": "^9.0.1",
     "@deck.gl/layers": "^9.0.1",
     "@deck.gl/react": "^9.0.1",
-    "@loaders.gl/core": "4.4.0-alpha.0",
-    "@loaders.gl/draco": "4.4.0-alpha.0",
-    "@loaders.gl/las": "4.4.0-alpha.0",
-    "@loaders.gl/obj": "4.4.0-alpha.0",
-    "@loaders.gl/pcd": "4.4.0-alpha.0",
-    "@loaders.gl/ply": "4.4.0-alpha.0",
+    "@loaders.gl/core": "portal:../../../modules/core",
+    "@loaders.gl/draco": "portal:../../../modules/draco",
+    "@loaders.gl/gltf": "portal:../../../modules/gltf",
+    "@loaders.gl/las": "portal:../../../modules/las",
+    "@loaders.gl/obj": "portal:../../../modules/obj",
+    "@loaders.gl/pcd": "portal:../../../modules/pcd",
+    "@loaders.gl/ply": "portal:../../../modules/ply",
     "@monaco-editor/react": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.3.0",
@@ -28,5 +29,9 @@
   "devDependencies": {
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
+  },
+  "volta": {
+    "node": "20.18.0",
+    "yarn": "4.4.1"
   }
 }
