revert unrelated changes

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   ],
   "workspaces": [
     "modules/*",
-    "examples/website/pointcloud"
+    "examples",
+    "website"
   ],
   "scripts": {
     "bootstrap": "ocular-bootstrap",
