--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   ],
   "resolutions": {
     "apache-arrow": "^17.0.0",
-    "typescript": "^5.6.0",
+    "typescript": "~5.6.0",
     "@loaders.gl/core": "^4.4.0-alpha.1",
     "@loaders.gl/draco": "^4.4.0-alpha.1",
     "@loaders.gl/geopackage": "^4.4.0-alpha.1",
