--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   ],
   "resolutions": {
     "apache-arrow": "^17.0.0",
+    "typescript": "^5.6.0",
     "@loaders.gl/core": "^4.4.0-alpha.1",
     "@loaders.gl/draco": "^4.4.0-alpha.1",
     "@loaders.gl/geopackage": "^4.4.0-alpha.1",
@@ -78,6 +79,6 @@
   },
   "volta": {
     "node": "20.18.0",
-    "yarn": "4.6.0"
+    "yarn": "4.4.1"
   }
 }
