--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Run browser tests (generate coverage)
         run: |
+          export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+          export PUPPETEER_ARGS="--no-sandbox"
           yarn run test-cover
 
       - name: Run node tests
