--- a/modules/parquet/package.json
+++ b/modules/parquet/package.json
@@ -74,12 +74,13 @@
     "brotli": "^1.3.2",
     "ieee754": "^1.2.1",
     "int53": "^0.2.4",
+    "isomorphic-ws": "^5.0.0",
     "lz4js": "^0.2.0",
     "node-int64": "^0.4.0",
     "object-stream": "0.0.1",
     "parquet-wasm": "^0.6.1",
     "snappyjs": "^0.6.0",
-    "thrift": "^0.19.0",
+    "thrift": "^0.22.0",
     "util": "^0.12.5",
     "varint": "^6.0.0",
     "zstd-codec": "^0.1"
