--- a/modules/parquet/package.json
+++ b/modules/parquet/package.json
@@ -74,6 +74,7 @@
     "brotli": "^1.3.2",
     "ieee754": "^1.2.1",
     "int53": "^0.2.4",
+    "isomorphic-ws": "^5.0.0",
     "lz4js": "^0.2.0",
     "node-int64": "^0.4.0",
     "object-stream": "0.0.1",
