--- a/examples/website/3d-tiles/package.json
+++ b/examples/website/3d-tiles/package.json
@@ -26,13 +26,13 @@
     "maplibre-gl": "^2.4.0",
     "marked": "^0.7.0",
     "prop-types": "^15.7.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-map-gl": "^7.0.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.2.7"
   }
 }
