--- a/examples/website/i3s-arcgis/package.json
+++ b/examples/website/i3s-arcgis/package.json
@@ -20,11 +20,11 @@
     "@esri/react-arcgis": "^5.2.0",
     "@loaders.gl/core": "4.4.0-alpha.1",
     "@loaders.gl/i3s": "4.4.0-alpha.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.2.7"
   }
 }
