--- a/examples/website/i3s-picking/package.json
+++ b/examples/website/i3s-picking/package.json
@@ -26,14 +26,14 @@
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^3.6.2",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
+    "react": "19.2.3",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.2.3",
     "react-map-gl": "^7.1.7",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.2.7"
   }
 }
