--- a/examples/website/pointcloud/package.json
+++ b/examples/website/pointcloud/package.json
@@ -21,12 +21,12 @@
     "@loaders.gl/ply": "4.4.0-alpha.1",
     "@monaco-editor/react": "^4.5.0",
     "prop-types": "^15.7.2",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.2.7"
   }
 }
