--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        node-version: [22]
+        node-version: [20, 22, 24]
 
     steps:
       - name: Checkout code
