--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,18 @@ on:
 
 jobs:
   test:
+    name: Tests (Node ${{ matrix.node-version }} - ${{ matrix.full && 'full suite' || 'node tests only' }})
     runs-on: ubuntu-22.04
     timeout-minutes: 15
     strategy:
       matrix:
-        node-version: [20, 22, 24]
+        include:
+          - node-version: 24
+            full: true
+          - node-version: 22
+            full: false
+          - node-version: 20
+            full: false
 
     steps:
       - name: Checkout code
@@ -32,10 +39,12 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Build
+        if: matrix.full
         run: |
           yarn run build
 
       - name: Run browser tests (generate coverage)
+        if: matrix.full
         run: |
           yarn run test-cover
 
@@ -44,10 +53,12 @@ jobs:
           yarn run test-node
 
       - name: Run lint
+        if: matrix.full
         run: |
           yarn run lint
 
       - name: Coveralls
+        if: matrix.full
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
