--- a/.nycrc
+++ b/.nycrc
@@ -19,6 +19,7 @@
     "**/encoding.js",
     "**/laz-perf.js",
     "**3d-tiles/src/styles/**",
-    "**/src/flatgeobuf/**"
+    "**/src/flatgeobuf/**",
+    "modules/worker-utils/src/lib/process-utils/child-process-proxy.ts"
   ]
 }
