--- a/website/package.json
+++ b/website/package.json
@@ -26,8 +26,8 @@
     "@deck.gl/layers": "^9.0.33",
     "@deck.gl/mesh-layers": "^9.0.33",
     "@deck.gl/react": "^9.0.33",
-    "@docusaurus/core": "^3.5.2",
-    "@docusaurus/preset-classic": "^3.5.2",
+    "@docusaurus/core": "^3.9.2",
+    "@docusaurus/preset-classic": "^3.9.2",
     "@esri/react-arcgis": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -71,14 +71,14 @@
   },
   "devDependencies": {
     "@cmfcmf/docusaurus-search-local": "~1.1.0",
-    "@docusaurus/module-type-aliases": "^3.5.2",
-    "@docusaurus/plugin-client-redirects": "^3.5.2",
-    "@docusaurus/plugin-content-docs": "^3.5.2",
-    "@docusaurus/tsconfig": "^3.5.2",
+    "@docusaurus/module-type-aliases": "^3.9.2",
+    "@docusaurus/plugin-client-redirects": "^3.9.2",
+    "@docusaurus/plugin-content-docs": "^3.9.2",
+    "@docusaurus/tsconfig": "^3.9.2",
     "babel-plugin-styled-components": "~2.0.0",
     "ts-node": "~10.9.1"
   },
-  "resolutions": {
+  "resolutions_disabled": {
     "@loaders.gl/core": "^4.4.0-alpha.1",
     "@loaders.gl/draco": "^4.4.0-alpha.1",
     "@loaders.gl/geopackage": "^4.4.0-alpha.1",
