--- a/modules/excel/package.json
+++ b/modules/excel/package.json
@@ -29,6 +29,9 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./excel-worker.js": {
+      "import": "./dist/excel-worker.js"
     }
   },
   "sideEffects": false,
