--- a/modules/flatgeobuf/package.json
+++ b/modules/flatgeobuf/package.json
@@ -29,6 +29,9 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./flatgeobuf-worker.js": {
+      "import": "./dist/flatgeobuf-worker.js"
     }
   },
   "sideEffects": false,
