--- a/modules/parquet/package.json
+++ b/modules/parquet/package.json
@@ -30,6 +30,9 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./parquet-worker.js": {
+      "import": "./dist/parquet-worker.js"
     }
   },
   "sideEffects": false,
