--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,110 +16,318 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
-    "noEmit": true,
+    
     // This must be specified if "paths" is.
     "baseUrl": ".",
     "paths": {
       // Supoort modules
-      "@loaders.gl/schema": ["modules/schema/src"],
-      "@loaders.gl/schema/test": ["modules/schema/test"],
-      "@loaders.gl/schema-utils": ["modules/schema-utils/src"],
-      "@loaders.gl/schema-utils/test": ["modules/schema-utils/test"],
-      "@loaders.gl/worker-utils": ["modules/worker-utils/src"],
-      "@loaders.gl/worker-utils/test": ["modules/worker-utils/test"],
-      "@loaders.gl/loader-utils": ["modules/loader-utils/src"],
-      "@loaders.gl/loader-utils/test": ["modules/loader-utils/test"],
-      "@loaders.gl/polyfills": ["modules/polyfills/src"],
-      "@loaders.gl/polyfills/test": ["modules/polyfills/test"],
-      "@loaders.gl/math": ["modules/math/src"],
-      "@loaders.gl/math/test": ["modules/math/test"],
-      "@loaders.gl/geoarrow": ["modules/geoarrow/src"],
-      "@loaders.gl/geoarrow/test": ["modules/geoarrow/test"],
-
-      "@loaders.gl/core": ["modules/core/src"],
-      "@loaders.gl/core/lib/*": ["modules/core/src/lib/*"],
-      "@loaders.gl/core/test": ["modules/core/test"],
-
-      "@loaders.gl/compression": ["modules/compression/src"],
-      "@loaders.gl/compression/test": ["modules/compression/test"],
-      "@loaders.gl/crypto": ["modules/crypto/src"],
-      "@loaders.gl/crypto/test": ["modules/crypto/test"],
-
-      "@loaders.gl/3d-tiles": ["modules/3d-tiles/src"],
-      "@loaders.gl/3d-tiles/test": ["modules/3d-tiles/test"],
-      "@loaders.gl/arrow": ["modules/arrow/src"],
-      "@loaders.gl/arrow/test": ["modules/arrow/test"],
-      "@loaders.gl/csv": ["modules/csv/src"],
-      "@loaders.gl/csv/test": ["modules/csv/test"],
-      "@loaders.gl/draco": ["modules/draco/src"],
-      "@loaders.gl/draco/test": ["modules/draco/test"],
-      "@loaders.gl/excel": ["modules/excel/src"],
-      "@loaders.gl/excel/test": ["modules/excel/test"],
-      "@loaders.gl/flatgeobuf": ["modules/flatgeobuf/src"],
-      "@loaders.gl/flatgeobuf/test": ["modules/flatgeobuf/test"],
-      "@loaders.gl/geopackage": ["modules/geopackage/src"],
-      "@loaders.gl/geopackage/test": ["modules/geopackage/test"],
-      "@loaders.gl/geotiff": ["modules/geotiff/src"],
-      "@loaders.gl/geotiff/test": ["modules/geotiff/test"],
-      "@loaders.gl/gis": ["modules/gis/src"],
-      "@loaders.gl/gis/test": ["modules/gis/test"],
-      "@loaders.gl/gltf": ["modules/gltf/src"],
-      "@loaders.gl/gltf/test": ["modules/gltf/test"],
-      "@loaders.gl/images": ["modules/images/src"],
-      "@loaders.gl/images/test": ["modules/images/test"],
-      "@loaders.gl/i3s": ["modules/i3s/src"],
-      "@loaders.gl/i3s/test": ["modules/i3s/test"],
-      "@loaders.gl/json": ["modules/json/src"],
-      "@loaders.gl/json/test": ["modules/json/test"],
-      "@loaders.gl/kml": ["modules/kml/src"],
-      "@loaders.gl/kml/test": ["modules/kml/test"],
-      "@loaders.gl/las": ["modules/las/src"],
-      "@loaders.gl/las/test": ["modules/las/test"],
-      "@loaders.gl/lerc": ["modules/lerc/src"],
-      "@loaders.gl/lerc/test": ["modules/lerc/test"],
-      "@loaders.gl/mvt": ["modules/mvt/src"],
-      "@loaders.gl/mvt/test": ["modules/mvt/test"],
-      "@loaders.gl/netcdf": ["modules/netcdf/src"],
-      "@loaders.gl/netcdf/test": ["modules/netcdf/test"],
-      "@loaders.gl/obj": ["modules/obj/src"],
-      "@loaders.gl/obj/test": ["modules/obj/test"],
-      "@loaders.gl/parquet": ["modules/parquet/src"],
-      "@loaders.gl/parquet/*": ["modules/parquet/src/*"],
-      "@loaders.gl/parquet/test": ["modules/parquet/test"],
-      "@loaders.gl/pcd": ["modules/pcd/src"],
-      "@loaders.gl/pcd/test": ["modules/pcd/test"],
-      "@loaders.gl/pmtiles": ["modules/pmtiles/src"],
-      "@loaders.gl/pmtiles/test": ["modules/pmtiles/test"],
-      "@loaders.gl/ply": ["modules/ply/src"],
-      "@loaders.gl/ply/test": ["modules/ply/test"],
-      "@loaders.gl/potree": ["modules/potree/src"],
-      "@loaders.gl/potree/test": ["modules/potree/test"],
-      "@loaders.gl/shapefile": ["modules/shapefile/src"],
-      "@loaders.gl/shapefile/test": ["modules/shapefile/test"],
-      "@loaders.gl/tiles": ["modules/tiles/src"],
-      "@loaders.gl/tiles/test": ["modules/tiles/test"],
-      "@loaders.gl/tile-converter": ["modules/tile-converter/src"],
-      "@loaders.gl/tile-converter/test": ["modules/tile-converter/test"],
-      "@loaders.gl/terrain": ["modules/terrain/src"],
-      "@loaders.gl/terrain/test": ["modules/terrain/test"],
-      "@loaders.gl/textures": ["modules/textures/src"],
-      "@loaders.gl/textures/test": ["modules/textures/test"],
-      "@loaders.gl/video": ["modules/video/src"],
-      "@loaders.gl/video/test": ["modules/video/test"],
-      "@loaders.gl/wkt": ["modules/wkt/src"],
-      "@loaders.gl/wkt/test": ["modules/wkt/test"],
-      "@loaders.gl/wms": ["modules/wms/src"],
-      "@loaders.gl/wms/test": ["modules/wms/test"],
-      "@loaders.gl/xml": ["modules/xml/src"],
-      "@loaders.gl/xml/test": ["modules/xml/test"],
-      "@loaders.gl/zarr": ["modules/zarr/src"],
-      "@loaders.gl/zarr/test": ["modules/zarr/test"],
-      "@loaders.gl/zip": ["modules/zip/src"],
-      "@loaders.gl/zip/test": ["modules/zip/test"],
-      "test": ["test"]
+      "@loaders.gl/schema": [
+        "modules/schema/src"
+      ],
+      "@loaders.gl/schema/test": [
+        "modules/schema/test"
+      ],
+      "@loaders.gl/schema-utils": [
+        "modules/schema-utils/src"
+      ],
+      "@loaders.gl/schema-utils/test": [
+        "modules/schema-utils/test"
+      ],
+      "@loaders.gl/worker-utils": [
+        "modules/worker-utils/src"
+      ],
+      "@loaders.gl/worker-utils/test": [
+        "modules/worker-utils/test"
+      ],
+      "@loaders.gl/loader-utils": [
+        "modules/loader-utils/src"
+      ],
+      "@loaders.gl/loader-utils/test": [
+        "modules/loader-utils/test"
+      ],
+      "@loaders.gl/polyfills": [
+        "modules/polyfills/src"
+      ],
+      "@loaders.gl/polyfills/test": [
+        "modules/polyfills/test"
+      ],
+      "@loaders.gl/math": [
+        "modules/math/src"
+      ],
+      "@loaders.gl/math/test": [
+        "modules/math/test"
+      ],
+      "@loaders.gl/geoarrow": [
+        "modules/geoarrow/src"
+      ],
+      "@loaders.gl/geoarrow/test": [
+        "modules/geoarrow/test"
+      ],
+      "@loaders.gl/core": [
+        "modules/core/src"
+      ],
+      "@loaders.gl/core/lib/*": [
+        "modules/core/src/lib/*"
+      ],
+      "@loaders.gl/core/test": [
+        "modules/core/test"
+      ],
+      "@loaders.gl/compression": [
+        "modules/compression/src"
+      ],
+      "@loaders.gl/compression/test": [
+        "modules/compression/test"
+      ],
+      "@loaders.gl/crypto": [
+        "modules/crypto/src"
+      ],
+      "@loaders.gl/crypto/test": [
+        "modules/crypto/test"
+      ],
+      "@loaders.gl/3d-tiles": [
+        "modules/3d-tiles/src"
+      ],
+      "@loaders.gl/3d-tiles/test": [
+        "modules/3d-tiles/test"
+      ],
+      "@loaders.gl/arrow": [
+        "modules/arrow/src"
+      ],
+      "@loaders.gl/arrow/test": [
+        "modules/arrow/test"
+      ],
+      "@loaders.gl/csv": [
+        "modules/csv/src"
+      ],
+      "@loaders.gl/csv/test": [
+        "modules/csv/test"
+      ],
+      "@loaders.gl/draco": [
+        "modules/draco/src"
+      ],
+      "@loaders.gl/draco/test": [
+        "modules/draco/test"
+      ],
+      "@loaders.gl/excel": [
+        "modules/excel/src"
+      ],
+      "@loaders.gl/excel/test": [
+        "modules/excel/test"
+      ],
+      "@loaders.gl/flatgeobuf": [
+        "modules/flatgeobuf/src"
+      ],
+      "@loaders.gl/flatgeobuf/test": [
+        "modules/flatgeobuf/test"
+      ],
+      "@loaders.gl/geopackage": [
+        "modules/geopackage/src"
+      ],
+      "@loaders.gl/geopackage/test": [
+        "modules/geopackage/test"
+      ],
+      "@loaders.gl/geotiff": [
+        "modules/geotiff/src"
+      ],
+      "@loaders.gl/geotiff/test": [
+        "modules/geotiff/test"
+      ],
+      "@loaders.gl/gis": [
+        "modules/gis/src"
+      ],
+      "@loaders.gl/gis/test": [
+        "modules/gis/test"
+      ],
+      "@loaders.gl/gltf": [
+        "modules/gltf/src"
+      ],
+      "@loaders.gl/gltf/test": [
+        "modules/gltf/test"
+      ],
+      "@loaders.gl/images": [
+        "modules/images/src"
+      ],
+      "@loaders.gl/images/test": [
+        "modules/images/test"
+      ],
+      "@loaders.gl/i3s": [
+        "modules/i3s/src"
+      ],
+      "@loaders.gl/i3s/test": [
+        "modules/i3s/test"
+      ],
+      "@loaders.gl/json": [
+        "modules/json/src"
+      ],
+      "@loaders.gl/json/test": [
+        "modules/json/test"
+      ],
+      "@loaders.gl/kml": [
+        "modules/kml/src"
+      ],
+      "@loaders.gl/kml/test": [
+        "modules/kml/test"
+      ],
+      "@loaders.gl/las": [
+        "modules/las/src"
+      ],
+      "@loaders.gl/las/test": [
+        "modules/las/test"
+      ],
+      "@loaders.gl/lerc": [
+        "modules/lerc/src"
+      ],
+      "@loaders.gl/lerc/test": [
+        "modules/lerc/test"
+      ],
+      "@loaders.gl/mvt": [
+        "modules/mvt/src"
+      ],
+      "@loaders.gl/mvt/test": [
+        "modules/mvt/test"
+      ],
+      "@loaders.gl/netcdf": [
+        "modules/netcdf/src"
+      ],
+      "@loaders.gl/netcdf/test": [
+        "modules/netcdf/test"
+      ],
+      "@loaders.gl/obj": [
+        "modules/obj/src"
+      ],
+      "@loaders.gl/obj/test": [
+        "modules/obj/test"
+      ],
+      "@loaders.gl/parquet": [
+        "modules/parquet/src"
+      ],
+      "@loaders.gl/parquet/*": [
+        "modules/parquet/src/*"
+      ],
+      "@loaders.gl/parquet/test": [
+        "modules/parquet/test"
+      ],
+      "@loaders.gl/pcd": [
+        "modules/pcd/src"
+      ],
+      "@loaders.gl/pcd/test": [
+        "modules/pcd/test"
+      ],
+      "@loaders.gl/pmtiles": [
+        "modules/pmtiles/src"
+      ],
+      "@loaders.gl/pmtiles/test": [
+        "modules/pmtiles/test"
+      ],
+      "@loaders.gl/ply": [
+        "modules/ply/src"
+      ],
+      "@loaders.gl/ply/test": [
+        "modules/ply/test"
+      ],
+      "@loaders.gl/potree": [
+        "modules/potree/src"
+      ],
+      "@loaders.gl/potree/test": [
+        "modules/potree/test"
+      ],
+      "@loaders.gl/shapefile": [
+        "modules/shapefile/src"
+      ],
+      "@loaders.gl/shapefile/test": [
+        "modules/shapefile/test"
+      ],
+      "@loaders.gl/tiles": [
+        "modules/tiles/src"
+      ],
+      "@loaders.gl/tiles/test": [
+        "modules/tiles/test"
+      ],
+      "@loaders.gl/tile-converter": [
+        "modules/tile-converter/src"
+      ],
+      "@loaders.gl/tile-converter/test": [
+        "modules/tile-converter/test"
+      ],
+      "@loaders.gl/terrain": [
+        "modules/terrain/src"
+      ],
+      "@loaders.gl/terrain/test": [
+        "modules/terrain/test"
+      ],
+      "@loaders.gl/textures": [
+        "modules/textures/src"
+      ],
+      "@loaders.gl/textures/test": [
+        "modules/textures/test"
+      ],
+      "@loaders.gl/video": [
+        "modules/video/src"
+      ],
+      "@loaders.gl/video/test": [
+        "modules/video/test"
+      ],
+      "@loaders.gl/wkt": [
+        "modules/wkt/src"
+      ],
+      "@loaders.gl/wkt/test": [
+        "modules/wkt/test"
+      ],
+      "@loaders.gl/wms": [
+        "modules/wms/src"
+      ],
+      "@loaders.gl/wms/test": [
+        "modules/wms/test"
+      ],
+      "@loaders.gl/xml": [
+        "modules/xml/src"
+      ],
+      "@loaders.gl/xml/test": [
+        "modules/xml/test"
+      ],
+      "@loaders.gl/zarr": [
+        "modules/zarr/src"
+      ],
+      "@loaders.gl/zarr/test": [
+        "modules/zarr/test"
+      ],
+      "@loaders.gl/zip": [
+        "modules/zip/src"
+      ],
+      "@loaders.gl/zip/test": [
+        "modules/zip/test"
+      ],
+      "test": [
+        "test"
+      ]
     }
   },
-  "exclude":[
+  "plugins": [
+    {
+      "transform": "@vis.gl/ts-plugins/ts-transform-version-inline"
+    },
+    {
+      "transform": "@vis.gl/ts-plugins/ts-transform-inline-webgl-constants"
+    },
+    {
+      "transform": "@vis.gl/ts-plugins/ts-transform-remove-glsl-comments"
+    },
+    {
+      "transform": "@vis.gl/ts-plugins/ts-transform-append-extension",
+      "extensions": [
+        ".js"
+      ],
+      "after": true
+    },
+    {
+      "transform": "@vis.gl/ts-plugins/ts-transform-append-extension",
+      "extensions": [
+        ".js"
+      ],
+      "afterDeclarations": true
+    }
+  ],
+  "exclude": [
     "modules/**/src/libs",
     "modules/*/bin/**",
     "modules/*/dist/**",
